Feature: add traces tree endpoint
