# cmd/api/handler/responses/trace.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/baking-bad/noble-indexer/internal/storage"
 	"github.com/baking-bad/noble-indexer/pkg/types"
+	"github.com/pkg/errors"
 	"github.com/shopspring/decimal"
 )
 
@@ -77,4 +78,69 @@ func NewTrace(t *storage.Trace) Trace {
 	}
 
 	return result
+}
+
+var errInvalidTraceAddress = errors.New("invalid trace address")
+
+// TraceTreeItem model info
+//
+//	@Description	Transaction execution trace tree item
+type TraceTreeItem struct {
+	*Trace
+	Children []*TraceTreeItem `json:"children,omitempty" swaggertype:"array,object"`
+}
+
+func BuildTraceTree(traces []*storage.Trace) (*TraceTreeItem, error) {
+	var root *TraceTreeItem
+
+	appendChildren := func(parent *TraceTreeItem, child *TraceTreeItem, idx uint64) error {
+		if parent == nil {
+			return errors.Wrap(errInvalidTraceAddress, "root is nil")
+		}
+		if idx >= uint64(len(parent.Children)) {
+			return errors.Wrap(errInvalidTraceAddress, "trace address out of range")
+		}
+		parent.Children[idx] = child
+		return nil
+	}
+
+	for i := range traces {
+		if traces[i] == nil {
+			return nil, errors.New("nil trace in traces list")
+		}
+		resp := NewTrace(traces[i])
+
+		item := TraceTreeItem{
+			Trace:    &resp,
+			Children: make([]*TraceTreeItem, resp.Subtraces),
+		}
+
+		switch len(resp.TraceAddress) {
+		case 0:
+			// root trace
+			root = &item
+		case 1:
+			// first level trace
+			if err := appendChildren(root, &item, resp.TraceAddress[0]); err != nil {
+				return nil, err
+			}
+		default:
+			// deeper levels
+			current := root
+			for j := 0; j < len(resp.TraceAddress)-1; j++ {
+				if current == nil {
+					return nil, errors.Wrap(errInvalidTraceAddress, "current is nil")
+				}
+				if resp.TraceAddress[j] >= uint64(len(current.Children)) {
+					return nil, errors.Wrap(errInvalidTraceAddress, "trace address out of range")
+				}
+				current = current.Children[resp.TraceAddress[j]]
+			}
+
+			if err := appendChildren(current, &item, resp.TraceAddress[len(resp.TraceAddress)-1]); err != nil {
+				return nil, err
+			}
+		}
+	}
+	return root, nil
 }
